<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="davidbar.foodwithfriends.SetLocationActivity"
    tools:showIn="@layout/activity_set_location"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="#e6a84a">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/header_set_location"
        android:id="@+id/location_header"
        android:textSize="20sp"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Current Location:"
        android:id="@+id/current_location_header"
        android:layout_below="@+id/location_header"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Unable to detect current location."
        android:id="@+id/current_location_str"
        android:layout_below="@+id/current_location_header"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/addressText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"
        android:layout_above="@+id/submitButton"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/submitButton"
        android:text="@string/submit"
        android:textStyle="bold"
        android:background="#ff2000"
        android:textColor="#ffffff"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="clickSubmitButton"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/nextButton" />

    <Button
        android:id="@+id/backButton"
        android:text="@string/back"
        android:textStyle="bold"
        android:background="#ff2000"
        android:textColor="#ffffff"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="clickBackButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/nextButton"
        android:text="@string/next"
        android:textStyle="bold"
        android:background="#ff2000"
        android:textColor="#ffffff"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="clickNextButton"
        android:layout_alignTop="@+id/backButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
