<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="davidbar.foodwithfriends.MainActivity"
    tools:showIn="@layout/activity_main">

    <Space
        android:id="@+id/topSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/main_img_temp1"
        android:adjustViewBounds="true"
        android:layout_above="@+id/mainQuestion"
        android:layout_below="@+id/topSpace"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/mainQuestion"
        android:text="@string/textQuestion"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/myselfButton"/>

    <Button
        android:id="@+id/myselfButton"
        android:text="@string/myselfButton_str"
        android:textStyle="bold"
        android:background="#20B2AA"
        android:textColor="#ffffff"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/friendsButton"
        android:onClick="clickMyselfButton"
        android:theme="@style/MyButton"/>

    <Button
        android:id="@+id/friendsButton"
        android:text="@string/friendsButton_str"
        android:textStyle="bold"
        android:background="#FF7F50"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickFriendsButton"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/MyButton"/>

</RelativeLayout>
